Missle destroys alien

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <body>
     <img class="space-ship" src="assets/images/space-ship.png">
+    <img class="missile" src="assets/images/missile.png">
     <img class="alien-a-0" src="assets/images/aliens/alien-a-0.png">
     <img class="alien-a-1" src="assets/images/aliens/alien-a-1.png">
     <img class="alien-b-0" src="assets/images/aliens/alien-b-0.png">
