Score, game over, restart

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
         </canvas>
         <div class="labels">
-            <p>Lives:<span class="lives-qty">3</span></p>
-            <p>Score:<span class="score-qty">100</span></p>
+            <p>Lives:<span class="lives-qty"></span></p>
+            <p>Score:<span class="score-qty"></span></p>
         </div>
     </div>
 
